refined recipe view and fixed missing scrollbar

--- a/RecipeRandomizer.Web/ClientApp/src/app/views/dashboard/dashboard-layout/user-recipes/user-recipes.component.scss
+++ b/RecipeRandomizer.Web/ClientApp/src/app/views/dashboard/dashboard-layout/user-recipes/user-recipes.component.scss
@@ -1,5 +1,11 @@
-.table th[scope=col] {
-    border-top: none !important;
+.table {
+    th[scope=col] {
+        border-top: none !important;
+    }
+
+    &-hover tbody tr:hover {
+        cursor: pointer;
+    }
 }
 
 .tab-content {
