--- a/RecipeRandomizer.Web/ClientApp/src/styles/main.scss
+++ b/RecipeRandomizer.Web/ClientApp/src/styles/main.scss
@@ -26,7 +26,7 @@ body {
     }
 
     &-circle {
-        border-radius: 45px;
+        @include custom-border-radius(45px);
     }
 
     &-no-outline {
